--- a/daw/proUno/proCinco.html
+++ b/daw/proUno/proCinco.html
@@ -41,7 +41,7 @@
   <section>
     <a name="5.0"></a>
     <h3 class="subTitulo_3">Introducción</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Hasta ahora hemos trabajado con información que una vez que finaliza la ejecución del programa, desaparece de la memoria, ya que ha estado almacenada en la memoria principal en el tiempo que dura la ejecución del software.
       </p>
@@ -54,7 +54,7 @@
   <section>  
     <a name="5.1"></a>
     <h3 class="subTitulo_3">Concepto y tipos de ficheros</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Un fichero es una parte de un dispositivo no volátil a la que se le asigna un nombre y que puede contener una cantidad de datos que va a estar limitada, o por la cantidad de espacio del que disponga el dispositivo, o por las características del SO. Los dispositivos no volátiles son aquellos que no pierden la información cuando apagamos nuestro ordenador.
       </p>
@@ -182,7 +182,7 @@
   <section>
     <a name="5.2"></a>
     <h3 class="subTitulo_3">Diseño y modulación de las operaciones sobre ficheros</h3>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Fundamentos de los flujos</h4>
       <p>
         Los flujos (steam) de datos son las estructuras o pasarelas que tenemos para acceder a los datos de un fichero, de una forma consistente y fiable, desde un código fuente en cualquier lenguaje de programación.
@@ -265,7 +265,7 @@
         El el flujo o stream de entrada/salida es cuando podemos tanto leer como escribir. Este tipo lo vamos a definir al iniciar el trabajo con ficheros, y no se podrá cambiar una vez abierto.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Clases de flujos</h4>
       <p>
         Utilizaremos las clases pertenecientes a los dos tipos de ficheros: binarios y de texto. Se pueden distinguir dos tipos de flujos:
@@ -281,8 +281,8 @@
   <section>
     <a name="5.3"></a>
     <h3 class="subTitulo_3">Operaciones sobre ficheros secuenciales</h3>
-    <article>
-      <article>
+    <article class="articuloApuntes">
+      <article class="articuloApuntes">
         <h4 class="subTitulo_4">Apertura</h4>
         <p>
           Lo primero siempre es abrir el fichero para que la operación que vayamos a realizar sobre él. Estamos relacionando un objeto de nuestro programa con un archivo. <br>
@@ -297,7 +297,7 @@
           <li><b>Append:</b> Abre el archivo si existe y realiza una búsqueda hasta el final, si no existe crea uno nuevo</li>
         </ul>
       </article>
-      <article>
+      <article class="articuloApuntes">
         <h4 class="subTitulo_4">Lectura/escritura</h4>
         <p>
           Al leer o escribir tenemos que prestar atención tanto al fin de fichero en ficheros secuenciales como a la posición del puntero en ficheros aleatorios.
@@ -377,14 +377,14 @@
           </pre>
         </p>
       </article>
-      <article>
+      <article class="articuloApuntes">
         <h4 class="subTitulo_4">Cierre</h4>
         <p>
           Cuando cerramos el fichero, este queda liberado y termina el proceso de almacenamiento de información.
         </p>
       </article>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Clase FileSteam</h4>
         <h4 class="subTitulo_4">Ficheros de texto</h4>
         <p>
@@ -523,7 +523,7 @@
   <section>
     <a name="5.4"></a>
     <h3 class="subTitulo_3">Control de excepciones</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Hasta ahora, el problema es que no hemos comprobado si ese fichero realmente existe o no, lo que puede suponer que nuestro programa falle en caso de que el fichero no se encuentre donde esperamos. <br>
         Una primera solución es usar el método exists para comprobar si está, antes de abrirlo.
