--- a/daw/proUno/programUno.html
+++ b/daw/proUno/programUno.html
@@ -43,7 +43,7 @@
     </div>
   <section> <!-- INTRO -->
     <h3 class="subTitulo_3">Introducción</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Un programa es un conjunto de instrucciones dadas al ordenador
         en un lenguaje que solo es entendible por él para
@@ -58,7 +58,7 @@
       </p>
     </article>
     <h4 class="subTitulo_4">Caractéristicas de un programa:</h4>
-    <article>
+    <article class="articuloApuntes">
       <ul>
         <li><b>Finito:</b> formado por un conjunto limitado de
           sentencias.</li>
@@ -83,7 +83,7 @@
   <section> <!-- PUNTO 1.1 -->
     <a name="1.1"></a>
     <h3 class="subTitulo_3">Representaciones gráficas</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>Para representar un algoritmo, podemos utilizar dos
         herramientas gráficas: los diagramas de flujo y el pseudocódigo.</p>
       <p>Un diagrama de flujo es una representación gráfica de un
@@ -91,7 +91,7 @@
         diferente que contiene una breve descripción.</p>
     </article>
     <h4 class="subTitulo_4">Debemos usar una serie de símbolos:</h4>
-    <article>
+    <article class="articuloApuntes">
       <p>
         <b>Rectángulo esquinas redondas:</b> Indican inicio o fin de programa.
         <img src="../../img/rectanguloR.png">
@@ -125,7 +125,7 @@
   <section> <!-- PUNTO 1.2 -->
     <a name="1.2"></a>
     <h3 class="subTitulo_3">Características de los diagramas de flujo</h3>
-    <article>
+    <article class="articuloApuntes">
       <ul>
         <li>Deben escribirse de arriba abajo o de izquierda a derecha.</li>
         <li>Debemos evitar el cruce de lineas, el unos de conectores debe producirse cuadno no exista otra opción.</li>
@@ -134,7 +134,7 @@
         <li>Todos los símbolos de decisión deben tener más de una línea de salida, deben indicar qué camino seguir en función de la decisión tomada.</li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>La otra herramienta para representar algoritmos es el pseudocódigo, que es la manera de representar distintas sentencias que va a realizar nuestro algoritomo. Este no se puede ejecutar en una máquina.</p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
@@ -142,7 +142,7 @@
   <section> <!-- PUNTO 1.3 -->
     <a name="1.3"></a>
     <h3 class="subTitulo_3">Características del pseudocódigo</h3>
-    <article>
+    <article class="articuloApuntes">
       <ul>
         <li>Comienza con la palabra algoritmo seguido de su nombre.</li>
         <li>Secuencia de intrucciones de este algoritmo.</li>
@@ -156,17 +156,17 @@
   <section> <!-- PUNTO 1.4 -->
     <a name="1.4"></a>
     <h3 class="subTitulo_3">Comunicación de un sistema informático</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>En el proceso de programación se comunica a un usuario con una máquina, se necesita:</p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <ul>
         <li>Usuario y máquina.</li>
         <li>El canal, Ej.: Teclado</li>
         <li>El lenguaje. debemos acercar los lenguajes para así lograr un entendimiento.</li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>Para solventar el problema de la comunicación tenemos lenguajes de tres tipos, alto nivel, nivel medio y bajo nivel. Los de alto nivel están más cerca del usuario, por el contrario los de bajo nivel se acercan más al lenguaje máquina.</p>
       <p>Implementararemos código con lenguajes de alto nivel para el cual necesitaremos traducción para convertir dicho programa en lenguaje máquina.</p>
     </article>
@@ -175,7 +175,7 @@
   <section> <!-- PUNTO 1.5 -->
     <a name="1.5"></a>
     <h3 class="subTitulo_3">Características del lenguaje de alto nivel</h3>
-    <article>
+    <article class="articuloApuntes">
       <ul>
         <li>Es totalmente independiente de la máquina y muy portable.</li>
         <li>Muy utilizado en el mercado laboral.</li>
@@ -188,14 +188,14 @@
   <section> <!-- PUNTO 1.6 -->
     <a name="1.6"></a>
     <h3 class="subTitulo_3">Características del lenguaje de bajo nivel</h3>
-    <article>
+    <article class="articuloApuntes">
       <ul>
         <li>Está relacionado con las características del hardware.</li>
         <li>Fácilmente traducible al lenguaje máquina.</li>
         <li>Es totalmente dependiente de la máquina.</li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>La estructura de un programa informático y sus elementos principales son las variables, las constantes y los distintos operadores.</p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
@@ -203,12 +203,12 @@
   <section> <!-- PUNTO 1.7 -->
     <a name="1.7"></a>
     <h3 class="subTitulo_3">Lenguajes compilados e interpretados</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>Los compilados son como su nombre indica aquellos que utilizan un compilador para traducirlos al lenguaje máquina.</p>
       <p>En los interpretados se efectúa directamente la traducción y ejecución simultáneamente para cada una de las sentencias. Un intérprete verifica cada línea cuando se escribe. La ejecución es más lenta debido a esta traducción simultánea.</p>
     </article>
     <h4 class="subTitulo_4">Características de C#</h4>
-    <article>
+    <article class="articuloApuntes">
       <ul>
         <li>Orientado a objetos</li>
         <li>Dos categorías de tipos de datos: valor y referencia.</li>
@@ -220,7 +220,7 @@
       </ul>
     </article>
     <h4 class="subTitulo_4">Características de Java</h4>
-    <article>
+    <article class="articuloApuntes">
       <ul>
         <li>Orientado a objetos</li>
         <li>Los argumentos con siempre pasados por valor.</li>
