--- a/daw/sistemas/temaCinco.html
+++ b/daw/sistemas/temaCinco.html
@@ -47,48 +47,48 @@
   </section>
   <!--*************************************************************-->
     <section>
-      <article>
+      <article class="articuloApuntes">
         <h3 class="subTitulo_3">Introducción</h3>
       </article>
   <!--*************************************************************-->
   <a name="5.1"></a>
-    <article>
+    <article class="articuloApuntes">
       <h3 class="subTitulo_3">Equipos de dominio</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="5.2"></a>
-    <article>
+    <article class="articuloApuntes">
       <h3 class="subTitulo_3">Permisos y derechos</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="5.3"></a>
-    <article>
+    <article class="articuloApuntes">
       <h3 class="subTitulo_3">Administración del acceso a recursos. Samba. NFS</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="5.4"></a>
-    <article>
+    <article class="articuloApuntes">
       <h3 class="subTitulo_3">Permisos de red. Permisos locales. Herencia. Permisos efectivos</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="5.5"></a>
-    <article>
+    <article class="articuloApuntes">
       <h3 class="subTitulo_3">Delegación de permisos</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="5.6"></a>
-    <article>
+    <article class="articuloApuntes">
       <h3 class="subTitulo_3">Listas de control de acceso (ACL Access Control List)</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="5.7"></a>
-    <article>
+    <article class="articuloApuntes">
       <h3 class="subTitulo_3">Directivas de grupo. Derechos de usuarios. Directivas de seguridad. Objetos de directiva. Ámbito de las directivas. Plantillas</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
