--- a/daw/proUno/proCuatro.html
+++ b/daw/proUno/proCuatro.html
@@ -47,7 +47,7 @@
   <section>
     <a name="4.1"></a>
     <h3 class="subTitulo_3">Concepto</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Consiste en dividir el problema original en diversos subproblemas, que se pueden resolver por separado, para después, recomponer los resultados y obtener la solución al problema.
       </p>
@@ -60,7 +60,7 @@
   <section>
     <a name="4.2"></a>
     <h3 class="subTitulo_3">Ventajas e inconvenientes</h3>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Ventajas:</h4>
       <ul>
         <li>Facilita el mantenimiento, la modificación y la documentación</li>
@@ -69,7 +69,7 @@
         <li>Independencia de fallos</li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Inconvenientes:</h4>
       <ul>
         <li>¿Cuánto hay que dividir nuestro problema?</li>
@@ -81,12 +81,12 @@
   <section>  
     <a name="4.3"></a>
     <h3 class="subTitulo_3">Análisis descendente (top down)</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Es una técnica que permite diseñar la solución de un problema con base en la modularización o segmentación, dándole un enfoque de arriba hacia abajo (top down). Se divide en módulos que se estructuran e integran jerárquicamente.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Divide y vencerás:</h4>
       <ul>
         <ul>
@@ -101,7 +101,7 @@
   <section>
     <a name="4.4"></a>
     <h3 class="subTitulo_3">Modulación de programas. Subprogramas</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Denominamos módulos como subprogramas, las diferentes partes del problema que puede resolverse de forma independiente. Al ser independientes permiten que podamos centrarnos en una de sus partes. Ofrecen la posibilidad de que se puedan utilizar las soluciones obtenidas en otras partes del programa.
       </p>
@@ -109,13 +109,13 @@
         Cada módulo dentro del programa se puede definir como una parte del código independiente, que realiza una tarea asignada.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Función Main</h4>
       <p>
         Todos los programas en C# tienen una función principal llamada main() que se ejecuta al iniciar el programa. Esta se encarga de gestionar el flujo de ejecución, llamando a los diferentes módulos si es necesario.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Los programas se dividen en subprogramas, denominados funciones o métodos. Estas funcionan deforma similar a una caja negra, el programa principal solo debe conocerlas para llamarlas por su nombre, los parámetros que reciben y lo que devuelven como resultado.
       </p>
@@ -125,7 +125,7 @@
   <section>
     <a name="4.5"></a>
     <h3 class="subTitulo_3">Llamadas a funciones (métodos). Tipos y funcionamiento</h3>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Funciones</h4>
       <p>
         Los métodos con los que trabajamos se denominan funciones. Cuando nos referimos a una función, un método o un subprograma, nos estamos refiriendo al mismo concepto.
@@ -160,7 +160,7 @@
         </pre>
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Vemos el significado de cada parte:</h4>
       <ul>
         <li>
@@ -178,12 +178,12 @@
         <li><b>Return:</b> si nuestro método está tipado, es obligatorio que devuelva un valor del tipo adecuado. Utiliza la palabra reservada return.</li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Mediante el uso de parámetros, se premite la comunicación de las diferentes funciones con el código.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Métodos no tipados (Void)</h4>
       <p>
         Son aquellos que realizan una tarea específica y que pueden recibir parámetros, pero no necesitan devolver un valor. 
@@ -212,7 +212,7 @@
       </p>
     </article>
     <h4 class="subTitulo_4">Paso de parámetros. Paso por valor y paso por referencia</h4>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Por valor</h4>
       <p>
         Cuando ejecutamos una función que tiene parámetros pasados por valor, se realiza una copia del parámetro que se ha pasado, que todas las modificaciones y cambios que se realicen se están haciendo en esta copia que ha creado. El original no se modifica.
@@ -237,7 +237,7 @@
         </pre>
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Por referencia</h4>
       <p>
         Cuando los párametros son pasados por referencia todas aquellas modificaciones que se realicen en la función van a afectar a sus parámetros, ya que se trabaja con los originales.
@@ -262,7 +262,7 @@
         </pre>
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">params, in y out</h4>
       <p>
         La palabra clave 'params' especifica un paso por valor. No se permiten pasar más parámetros después de la palabra clave 'params' en una declaración de método. Si el tipo declarado del parametro no es el mismo, se producirá un error.
@@ -279,7 +279,7 @@
   <section>
     <a name="4.6"></a>
     <h3 class="subTitulo_3">Ámbito de las llamadas a funciones</h3>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Variables globales</h4>
       <p>
         Una variable global es creada fuera de nuestro Main y fuera de cualquier método. Podemos acceder a ella en cualquier momento de nuestro programa.
@@ -291,13 +291,13 @@
         La forma correcta de pasar datos entre distintos métodos es usando los parámetros de cada función y los valores devueltos.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Variables locales</h4>
       <p>
         Se declaran dentro de un método, y solo este fragmento de código las conocerá. No se podrán usar desde ningún otro método del programa.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Conflictos de nombres en las variables</h4>
       <p>
         ¿Que ocurre si trabajamos con la misma variable global en dos métodos diferentes?
@@ -311,7 +311,7 @@
   <section>
     <a name="4.7"></a>
     <h3 class="subTitulo_3">Prueba, depuración y comentarios de programas</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Una vez terminado el programa es momento de probarlo para comprobar que no tiene fallos y su funcionamiento es correcto. En muchos casos no existen errores, pero el programa no realiza la tarea que debería.
       </p>
@@ -319,7 +319,7 @@
         Es recomendable que nuestro programa tenga comentarios, en todo lo importante que realiza.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Podemos encontrarnos errores en nuestro código, tanto sintácticos como semánticos, que pueden ir apareciendo sin esperalo. La mayoría de lenguajes disponen de herramientas que nos van a servir para tratar estos errores y conseguir solucionarlos.
       </p>
@@ -327,7 +327,7 @@
         En VS cuando ponermos una aplicación en modo depuración, tiene la posibilidad de visualizar línea a línea (F11), nuestro código para analizarlo de forma más detallada.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Cuando ejecutamos un programa, podemos dividir el proceso en varias partes:</h4>
       <ul>
         <li>Compilación</li>
@@ -335,7 +335,7 @@
         <li>Ejecución</li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Veamos cómo funcionan cada una de estas etapas:</h4>
       <ul>
         <li>
@@ -362,7 +362,7 @@
   <section>
     <a name="4.8"></a>
     <h3 class="subTitulo_3">Concepto de librerías</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Librerías son archivos que nos permiten llevar a cabo diferentes acciones y tareas sin necesidad de que el programador se preocupe de cómo están desarrolladas, solo entender cómo utilizarlas. Nos permiten hacer nuestros programas más modulares y reutilizables, facilitando crear programas con funcionalidades bastante complejas.
       </p>
@@ -370,7 +370,7 @@
         Cuando compilamos se comprueba que se ha llamado de manera correcta a las funciones que pertenecen a las diferentes librerías que nos ofrece el compilador, aunque el código de estas funciones no se ha insertado en el programa. El enlazador o linkador es el que realiza esta inserción y será el encargado de completar el código.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Una vez hemos obtenido el código, debemos comprobar que no se producen errores en tiempo de ejecución. Si los hubiera, debemos depurar el programa.
       </p>
@@ -388,7 +388,7 @@
   <section>
     <a name="4.9"></a>
     <h3 class="subTitulo_3">Uso de librerías</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Una librería es un conjunto de métodos relacionados con el mismo objetivo para poder ser reutilizado cada vez que el programador lo desee. Ejemplo Math.
       </p>
@@ -398,7 +398,7 @@
   <section>
     <a name="4.10"></a>
     <h3 class="subTitulo_3">Introducción al concepto de recursividad</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Es la llamada de una función a sí misma hasta que se cumpla una determinada condición de salida.
       </p>
