--- a/daw/proUno/proTres.html
+++ b/daw/proUno/proTres.html
@@ -49,7 +49,7 @@
   <section>
     <a name="3.0"></a>
     <h3 class="subTitulo_3">Introducción</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         La programación estructurada es un procedimiento que consiste en diseñar e inplementar programas de forma clara y sencilla para que puedan se mantenidos con facilidad.
       </p>
@@ -59,7 +59,7 @@
   <section>
     <a name="3.1"></a>
     <h3 class="subTitulo_3">Fundamentos de programación</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Los fundamentos de la programación son un conjunto de técnicas que persiguen desarrollar algoritmos que sean sencillos de escribir, leer, modificar y testear.
       </p>
@@ -67,7 +67,7 @@
         El orden en que se ejecutan las sentencias de un programa es secuencial, una detrás de otra, y en el orden en que se encuentran dentro del programa.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Teorema de Böhm y Jacopini</h4>
       <p>Debe de cumplir las siguientes características:</p>
       <ul>
@@ -81,7 +81,7 @@
   <section>
     <a name="3.2"></a>
     <h3 class="subTitulo_3">Introducción a la algoritmia y herramientas de diseño</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Un algoritmo es una secuencia de los pasos de las distintas operaciones que debe realizar el programa para conseguir resolver un problema planteado.
       </p>
@@ -97,7 +97,7 @@
   <section>
     <a name="3.3"></a>
     <h3 class="subTitulo_3">Ciclo de vida de un proyecto software</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>Ciclo de vida de un programa informático:</p>
       <ul>
         <li>
@@ -154,7 +154,7 @@
   <section>
     <a name="3.4"></a>
     <h3 class="subTitulo_3">Prueba de programas</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Una vez implementado y compilado el código debemos comenzar la estapa de testing.
       </p>
@@ -182,7 +182,7 @@
   <section>
     <a name="3.5"></a>
     <h3 class="subTitulo_3">Tipos de datos: simples y compuestos</h3>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Tipos simples</h4>
       <p>
         Debemos considerar el rango de valores que puede tomar, las operaciones a realizar y el espacion necesario para almacenar datos.
@@ -213,7 +213,7 @@
         </li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Tipos compuestos o estructurados</h4>
       <p>Se crean mediante la unión de varios tipos.</p>
       <ul>
@@ -236,7 +236,7 @@
   <section>
     <a name="3.6"></a>
     <h3 class="subTitulo_3">Estructuras de selección (Condicionales)</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Las estructuras de selección son aquellas que permiten ejecutar una parte del código dependiendo de si cumple o no una condición.
       </p>
@@ -318,7 +318,7 @@
         </pre>
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Operadores lógicos</h4>
       <p>
         <b>&&</b> - <b>AND:</b> ambas condiciones deben cumplirse para entrar en el bloque IF. No evalúa el operando derecho si el izquierdo es false.
@@ -387,7 +387,7 @@
         </tr>
       </table>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Sentencia Switch (o de selección múltiple)</h4>
       <p>
         Es una instrucción de selección que elige una sola acción de una lista de opciones en función de una coincidencia de distintos patrones de expresión. La cláusula default es optativa.
@@ -398,7 +398,7 @@
   <section>
     <a name="3.7"></a>
     <h3 class="subTitulo_3">Estructuras de repetición</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Las estructuras de repetición siempre se ejecutan mediante el uso de bucles. Estos permiten que una o varias líneas se ejecuten de forma repetida. Y se repiten mientras que se cumpla la condición de salida.
       </p>
@@ -500,7 +500,7 @@
   <section>
     <a name="3.8"></a>
     <h3 class="subTitulo_3">Estructuras de salto</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Son aquellas que detienen la ejecución de alguna de las sentencias de control de nuestro programa.
       </p>
@@ -566,7 +566,7 @@
   <section>
     <a name="3.9"></a>
     <h3 class="subTitulo_3">Tratamiento de cadenas</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Una cadena es un objeto de tipo string. Se utiliza la palabra reservada string. Siempre que queramos escribir combinaciones alfanuméricas, irán entre comillas dobles, ya que el compilador las tomará como un tipo string.
       </p>
@@ -655,7 +655,7 @@
   <section>  
     <a name="3.10"></a>
     <h3 class="subTitulo_3">Depuración de errores</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Llegados a esta etapa, nuestro objetivo será descubrir todos los errores que existan e intentar solucionarlos de la mejor forma posible. <br>
         Hay tres tipos de errores diferentes:
@@ -679,7 +679,7 @@
   <section>
     <a name="3.11"></a>
     <h3 class="subTitulo_3">Documentación de programas</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Debemos elaborar una memoria para que quede registrado todo el desarrollo que hemos llevado a cabo, los fallos que ha presentado y cómo hemos conseguido solventarlos. <br>
         Los ficheros deben estar testeados y funcionar correctamente.
@@ -694,7 +694,7 @@
   <section>
     <a name="3.12"></a>
     <h3 class="subTitulo_3">Entornos de desarrollo de programas</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Podemos denominar entorno de desarrollo integrado (IDE), al entorno de programación que hemos utilizado para su realización: editor de código, compilador, depurador e interfaz gráfica. <br>
         Deben cumplir una serie de características:
