--- a/daw/sistemas/temaCuatro.html
+++ b/daw/sistemas/temaCuatro.html
@@ -53,13 +53,13 @@
   <section>
     <a name="4.1"></a>
     <h3 class="subTitulo_3">>Introducción</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Mediante la Administración dominios podemos centralizar, simplificar y agilizar muy significativamente las tareas de gestión. Crear un dominio en un equipo servidor al que se conecten equipos cliente resulta muy práctico para administrar redes.
       </p>
     </article>
     <h3 class="subTitulo_3">Estructura cliente-servidor</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Este modelo de comunicación es bastante sencillo, ya que apartir de un equipo cliente, se necesita otro equipo servidor para que este realice aquellas funciones que tiene asignadas.
       </p>
@@ -67,14 +67,14 @@
         Pueden ser equipos diferentes o iguales. Una computadora puede ser cliente y servidor a la misma vez depediendo del software.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>Consta de los elementos:</p>
       <ul>
         <li><b>Cliente:</b> es el sistema que precisa de servicios</li>
         <li><b>Servidor:</b> es el sistema que proporciona servicios</li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Cliente y servidor son elementos separados que establecen su comunicación mediante la red de comunicaciones y colaboran para completar tareas de forma conjunta. Cuando el cliente precisa un servicio, realiza una petición y el servidor le da una respuesta. El servidor recibirá y procesará la petición y le brindará el servicio requerido. Ejemplo, el servicio web que empleamos para navegar por internet.
       </p>
@@ -85,7 +85,7 @@
   <section>
     <a name="4.2"></a>
     <h3 class="subTitulo_3">Protocolo LDAP</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Consideramos LDAP(Lightweight Directory Access Protocol) como un protocolo ligero de acceso a directorios. Se utiliza especialmente en las empresas, se emplea para acceder a servicios de directorio.
       </p>
@@ -93,7 +93,7 @@
         Podemos considerarlo como una base de datos pensada para almacenar directorios. La información se organiza de manera jerárquica y cada directorio puede almacenar un amplio abanico de datos.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>Las características y funcionalidades que nos brinda son muchas. Las más destacables son:</p>
       <ul>
         <li>
@@ -116,7 +116,7 @@
         </li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         LDAP brinda gran rapidez en lectura y escritura de datos, incluso cuando se da un gran volumen de accesos simultáneos. Cuando un cliente se conecta al servidor puede consultar o modificar directorios. En el segundo caso el servidor verifica los permisos necesarios antes de actualizar la información.
       </p>
@@ -125,7 +125,7 @@
       </p>
       <p>“sudo apt-get install slapdldap-utils”</p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>En Windows también podemos utilizar OpenLDAP.</p>
       <p>
         El sistema de Microsoft se refiere a su implementación del servicio de directorio en red como Active Directory. Este emplea varios protocolos, entre los que se encuentra LDAP. En Windows Server se instala por defecto, en Windows on podemos instalar Active Directory pero si gestionarlo remotamente a traves de la red mediante la aplicación Sitios y servicios de Active Directory.
@@ -137,7 +137,7 @@
   <section>
     <a name="4.3"></a>
     <h3 class="subTitulo_3">Concepto de dominio. Subdominios. Requisitos necesarios para montar un dominio</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Dependiendo de si estamos hablando de redes en sentido general o bien de internet podemos encontrar dos deficiones diferentes.
       </p>
@@ -152,7 +152,7 @@
         </li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>El subdominio, también puede variar dependiendo de a qué nos refiramos:</p>
       <ul>
         <li>
@@ -169,7 +169,7 @@
         </li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>Requisitos para la creación de un dominio de red</p>
       <p>
         El principal requisito es disponer de un S.O. orientado a servidor. Ejemplo Windows Server. Entre las tareas que realiza, destacar la de asignar CPU y memoria a los procesos.
@@ -196,7 +196,7 @@
         En estas configuraciones podemos realizar todas las configuraciones del dominio, como las reservas de direcciones, configuraciones de correo, etc.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         En Linux podemos utilizar Ubuntu Server. Para crear el dominio tenemos que configurar el servidor DNS: “sudo apt-get install -y bind9 ”.
       </p>
@@ -213,7 +213,7 @@
         En el directorio “var/cache/bind” los ficheros para configurar las direcciones de los equipos conectados al dominio.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h4 class="subTitulo_4">Requisitos para la creación de un dominio en internet</h4>
       <p>
         Debemos contratar el servicio con una empresa. La administración se lleva a cabo de manera remota, a través del navegador web.
@@ -225,12 +225,12 @@
   <section>
     <a name="4.4"></a>
     <h3 class="subTitulo_3">Conceptos clave de Active Directory</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Es una herramienta de Microsoft para gestionar servidores y administrar en ellos usuarios, grupos, etc.. Podemos gestionar los inicios de sesión de los equipos conectados a la red, definir políticas, etc.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>Debemos aprender la terminología que emplea:</p>
       <ul>
         <li>
@@ -295,7 +295,7 @@
         </li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         En AD  podemos establecer distintos tipos de grupos. Se emplean para reunir a usuarios, equipos y otros tipos de cuenta en entidades administrables.
       </p>
@@ -306,7 +306,7 @@
   <section>
     <a name="4.5"></a>
     <h3 class="subTitulo_3">Administración de cuentas. Cuentas predeterminadas</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         En aplicaciones como AD nos interesa generar cuentas de usuario para asignarlas a las distintas personas que van acceder a la red. A nivel interno, las cuentas de usuario son elementos de una base de datos de directorio a los que se les asigna de forma automatizada unos identificadores para garantizar la seguridad. Tras dar de alta a los usuarios, estos pueden acceder y utilizar los recursos del dominio que tengan asignados.
       </p>
@@ -317,7 +317,7 @@
         Nos permitirá gestionar los usuarios y grupos del dominio de una forma muy similar a las versiones cliente de Windows. También podmos gestionar los equipos enlazados al dominio u otros servidores que gestionen la red, con el objetivo de tener un mayor control sobre las conexiones en dominio.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Los servidores Linux son utilizados en modo texto. Los comandos más básicos para agregar o eliminar usuarios:
         <ul>
@@ -329,7 +329,7 @@
         En Linux podemos instalar diferentes interfaces gráficas y cada una pueden tener unas opciones diferentes de gestión.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>En el listado de usuarios, encontramos tres cuentas predeterminadas:</p>
       <ul>
         <li>Administrador (Plenos derechos)</li>
@@ -338,7 +338,7 @@
       </ul>
       <p>Cada una tiene asignada una combinación distinta de privilegios y permisos.</p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         La instalación de los servicios de red como los dominio crea grupos de usuarios por defecto y se les asigna un usuario administrador del dominio, el cual tendrá plenos privilegios.
       </p>
@@ -352,7 +352,7 @@
   <section>
     <a name="4.6"></a>
     <h3 class="subTitulo_3">Contraseñas. Bloqueos de cuenta. Cuentas de usuarios y equipos</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         A los usuarios dados de alta se les asignarán distintos privilegios, por lo que es vital que le asignemos contraseñas seguras.
       </p>
@@ -363,7 +363,7 @@
         Tras solicitar el acceso a los recursos mediante la introducción de los datos, pueden tener acceso si son correctos, en caso contrario se les deniega el acceso.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Para impedir que los usuarios no autorizados realicen infinitos intentos de entrar, podemos definir unos parámetros que la bloquearán.
       </p>
@@ -383,7 +383,7 @@
   <section>
     <a name="4.7"></a>
     <h3 class="subTitulo_3">Perfiles móviles y obligatorios</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Los perfiles de usuario nos permiten asignar a los usuarios del sistema características como los archivos y carpetas que utilizarán y la configuración de su escritorio. Toda esa información se lee y se carga cada vez que un usuario inicia sesión.
       </p>
@@ -394,7 +394,7 @@
         Este perfil lo puede realizar el administrador o un usuario con privilegios. Lo definirán en un directorio del servidor, de modo que quede compartido en red.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Los perfiles obligatorios se definen por el hecho de ser de solo lectura y únicamente pueden ser modificados por un administrador. Cuando el ususario inicie sesión se cargará su perfil pero no se guardará ninguna configuración o dato cuando cierre sesión.
       </p>
@@ -411,7 +411,7 @@
   <section>
     <a name="4.8"></a>
     <h3 class="subTitulo_3">Carpetas personales</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Cada usuario puede almacenar su información personal en una subcarpeta propia. Esta tendra el nombre del propio usuario y es frecuente que aparezca en los equipos cliente como una unidad de red. 
       </p>
@@ -428,7 +428,7 @@
   <section>
     <a name="4.9"></a>
     <h3 class="subTitulo_3">Plantillas de usuario. Variables de entorno</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Se utilizan para ahorrarnos una gran cantidad de trabajo. Nos permiten definir una serie de características comunes que posteriormente podemos aplicar a un gran número de usuarios.
       </p>
@@ -436,7 +436,7 @@
         Las variables de entorno, conforman un conjunto de valores que se ejecutan al inicio de la sesión del usuario y afectan al comportamiento de comandos y procesos.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>Las más comunes de Windows son:</p>
       <ul>
         <li><b>%APPDATA%:</b> directorio de las carpetas ocultas para datos de las aplicaciones</li>
@@ -449,7 +449,7 @@
         Como usuarios del sistema podemos editar y crear variables de este tipo. Programas como Oracle Database crean variables de este tipo para gestionar mejor sus recursos.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>En caso de linux encontramos variables como:</p>
       <ul>
         <li><b>'SHELL':</b> intérprete de comandos</li>
@@ -457,7 +457,7 @@
         <li><b>'HOME':</b> directorio actual del usuario de la sesión</li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>Para modificar los valores de estas variables debemos acceder a tres archivos de texto almacenados en el sistema</p>
       <ul>
         <li><b>/etc/environment -></b> variables independientes del intérprete de comandos</li>
@@ -471,7 +471,7 @@
   <section>
     <a name="4.10"></a>
     <h3 class="subTitulo_3">Administración de grupos. Tipo. Estrategias de anidamiento. Grupos predeterminados</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Si la empresa u organización cuya red administramos tiene un elevado número de departamentos y usuarios es fundamental que planeemos una estrategia para estructurarla en grupos.
       </p>
@@ -479,7 +479,7 @@
         Definir permisos y el acceso a los recursos resultará mucho más rápido. Los grupos nos permiten aunar las cuentas de usuario en unidades fácilmente administrables. Cuando añadimos un usuario a un grupo, este recibe todos los privilegios de usuario asignados al grupo y los permisos referentes a sus recursos compartidos.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>Distinguimos entre los siguientes tipos de grupos:</p>
       <ul>
         <li><b>Grupos de distribución:</b> pensados solamente para usarse con aplicaciones de correo electrónico</li>
@@ -492,7 +492,7 @@
         <li><b>Grupos de ámbito local:</b> los miembros dados de alta en este pueden realizar acciones en cualquier dominio, pero sus permisos son efectivos únicamente para recursos del dominio en el que fue creado el grupo.</li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>Hay una serie de grupos que se crean de forma predeterminada:</p>
       <ul>
         <li>Administradores</li>
@@ -511,7 +511,7 @@
         <li>Ofrecer aplicaciones auxiliares de asistencia remota</li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         En Linux al igual que sucedía con las cuentas de usuario tenemos dos formas de gestionarlo por comandos o interfaz gráfica.
       </p>
@@ -530,7 +530,7 @@
   <section>
     <a name="4.11"></a>
     <h3 class="subTitulo_3">Instalación de Windows Server y Ubuntu Server</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>Empecemos por Windows Server 2019:</p>
       <ol>
         <li>Configuramos la BIOS para que se inicie desde el DVD</li>
@@ -545,7 +545,7 @@
         <li>Escribimos la contraseña para el usuario administrador. Una vez iniciada la sesión, ya podemos empezar con la configuración básica de la administración del servidor</li>
       </ol>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>En el caso de Ubuntu Server 16, los pasos serán los que detallamos a continuación:</p>
       <ol>
         <li>Configuramos la BIOS para que se inicie desde el DVD</li>
