--- a/daw/sistemas/temaTres.html
+++ b/daw/sistemas/temaTres.html
@@ -53,13 +53,13 @@
   <section>
     <a name="3.1"></a>
     <h3 class="subTitulo_3">Introducción</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Podemos administrar y organizar la información gracias a los sistemas de archivos, además de administrar las prticiones de los dispositivos de almacenamiento, automatizar tareas y utilizar comodines y herramientas de búsqueda.
       </p>
     </article>
     <h3 class="subTitulo_3">Sistema de archivos</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         El sistema de archivos es el área del S.O. que se ocupa de gestionar la utilización de los medios para almacenar la información. Los datos que guardamos se representan en modo textual o gráfico. Utilizando un gestor de archivos podemos administrar estos medios con gran facilidad.
       </p>
@@ -82,7 +82,7 @@
         Eso nos ofrece una estructura jerárquica y ramificada, se denomina estructura en árbol.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h3 class="subTitulo_3">>Los Archivos</h3>
       <p>
         Son un mecanismo de almacenar información y volver a leerla. Tenemos dos grupos los ejecutables y los no ejecutables o archivos de datos. Su diferencia  es que los ejecutables pueden funcionar por ellos mismos y los datos necesitan un programa para ser utilizados.
@@ -91,7 +91,7 @@
         Existen gran variedad de extensiones y así pertenecer a diferentes categorías como: archivos del sistema, de vídeo, de audio, imágenes, comprimidos, etc...
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <h3 class="subTitulo_3">>Los Directorios</h3>
       <p>
         Son considerados una división lógica, forman una estructura jerárquica, en la que el usuario pueda buscar o crear archivos en esa ruta. En esa estructura de árbol, existe un directorio raíz (root), que engloba el resto de los directorios y archivos.
@@ -103,12 +103,12 @@
   <section>
     <a name="3.2"></a>
     <h3 class="subTitulo_3">Tipos de sitemas de archivos</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Existen muchos sistemas de archivos distintos, los que usaremos más habitualmente son los siguientes:
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <ul>
         <li>
           <b>fat32 (Tabla de asignación de archivos)</b>
@@ -130,7 +130,7 @@
         </li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         La elección del tipo de sistema de archivos suele realizarse tras particionar el disco, en el momento de formatearlo. Podemos crear, eliminar y modificar las particiones usando herramientas del propio S.O. Un mismo disco físico puede tener varias particiones, y el S.O. tratará cada una como un disco independiente.
       </p>
@@ -141,7 +141,7 @@
   <section>
     <a name="3.3"></a>
     <h3 class="subTitulo_3">Gestión de sitemas de archivos mediante comandos y entornos gráficos</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         El gestor de archivos viene predefinido entre las aplicaciones básicas, que son los programas encargados de localizar archivos, sean propios o del S.O.
       </p>
@@ -149,7 +149,7 @@
         En Windows, se accede desde la consola o símbolo del sistema o entorno gráfico Explorer. En linux también podemos acceder a través de la consola o programas como: Nemo, Nautilus, Dolphin, etc...
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>Instrucciones más esenciales:</p>
       <table>
         <tr>
@@ -199,7 +199,7 @@
         </tr>
       </table>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Existen muchas otras instrucciones. Para obtener ayuda sobre los parámetros que admiten podemos estribir /? tras ellas.
       </p>
@@ -219,7 +219,7 @@
   <section>
     <a name="3.4"></a>
     <h3 class="subTitulo_3">Gestión de enlaces</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Los navegadores web nos dan la opción de guardar el enlace a una página que nos interese y poder asi acceder a ella más tarde.
       </p>
@@ -233,7 +233,7 @@
         En realidad no guardamos las webs que nos interesan sino que creamos vínculos hacia ellas. Si la web deja de estar accesible, no funcionará.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         También en los S.O. podemos crear vínculos a los ejecutables, carpetas y archivos que funcionan de manera similar.
       </p>
@@ -244,7 +244,7 @@
         En Linux se utiliza la instrucción ln, (ln-s nombre_archivonombre_enlace). También los podremos crear con los gestores gráficos que utilicemos.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         La gestión de enlaces es una opción que nos agilizará muchos procesos cotidianos, ya sean web o aplicaciones. 
       </p>
@@ -261,7 +261,7 @@
   <section>
     <a name="3.5"></a>
     <h3 class="subTitulo_3">Estructura de directorios de sistemas operativos libres y propietarios</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         La estructura de árbol facilita la labor de los usuarios siempre que dispongamos de privilegios, podmeos modificarla generando nuevas carapetas, eliminando otras, etc..
       </p>
@@ -269,7 +269,7 @@
         Tras instalarse el sistema, la información suele estructurarse de acuerdo con unos estandares.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>En linux:</p>
       <table>
         <tr>
@@ -346,7 +346,7 @@
         </tr>
       </table>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>En Windows desctacan las siguientes carpetas:</p>
       <ul>
         <li>
@@ -383,7 +383,7 @@
         </li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Aunque esto sea así de forma predeterminada, lo ideal es que los documentos se guarden en una partición independiente. Así será más sencillo hacer backups. Esto también nos permite respaldar el S.O. independientemente de los datos. En caso de fallos podemos restaurarla respetando los documentos.
       </p>
@@ -394,19 +394,19 @@
   <section>
     <a name="3.6"></a>
     <h3 class="subTitulo_3">Búsqueda de información del sistema mediante comandos y herramientas gráficas</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         A veces nos vemos obligados a buscar un determinado archivo o directorio, para ello podemos utilizar diferentes comandos o una interfaz gráfica. Es muy importante que nos dominemos los comodines. Estos símbolos sirven para replazar cadenas de caracteres.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>En Dos y Windows disponemos de los siguientes:</p>
       <ul>
         <li><b>Asteristico(*):</b> sustituye cadenas completas y podemos utilizarlo para remplazar el nombre completo o alguna parte del nombre de cualquier archivo. También puede remplazar su extensión.</li>
         <li><b>Interrogación(?):</b> remplaza un solo carácter, aunque se pueden poner varios símbolos de interrrogación, según las necesidades.</li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>También podemos buscar ficheros desde el símbolo del sistema así:</p>
       <p>DIR[fichero a buscar]/s</p>
       <ul>
@@ -414,7 +414,7 @@
         <li>En el nombre del fichero a buscar podemos teclear comodines</li>
       </ul>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         La herramienta gráfica de windows también admite comodienes y permite especificar otros detalles para filtrar, como el tamaño del fichero, su fecha, etc...
       </p>
@@ -431,7 +431,7 @@
   <section>
     <a name="3.7"></a>
     <h3 class="subTitulo_3">Identificación del software instalado mediante comandos y herramientas gráficas</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Para determinar qué software tenemos instalado en un equipo, podemos acceder a Programas y características (Windows). También podemos examinar los programas instalados usando comandos. Buscando con la consola la carpeta Archivos de programa y usar el comando DIR para listar el directorio.
       </p>
@@ -445,7 +445,7 @@
   <section>
     <a name="3.8"></a>
     <h3 class="subTitulo_3">Gestión de la información del sistema. Rendimiento. Estadística</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Para cuantificar el rendimiento de nuestro equipo en windows tenemos que ir a Propiedades de Equipo. Hacer clic en Evaluación de la experiencia en Windows. Otras herramientas complementarias como el Monitor de rendimiento.
       </p>
@@ -465,7 +465,7 @@
   <section>
     <a name="3.9"></a>
     <h3 class="subTitulo_3">Montaje y desmontaje de dispositivos en sistemas operativos</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         El montaje/desmontaje de dispositivos es una técnica de administración de discos.
       </p>
@@ -476,7 +476,7 @@
         Para el montaje debemos acceder a Administración de disco, listadas todas las particiones, hacer clic con el botón secundario  en la unidad que queremos montar. Pulsamos sobre la opción de Cambiar la letra y rutas de acceso de unidad. Seguidamente sobre Agregar en Montar en la siguiente carpeta NTFS vacía y a continuación, escribimos la ubicación de una carpeta vacía.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>En linux para el montaje y desmontaje se utiliza el comando mount:</p>
       <p>mount-t < sistema de ficheros > < dispositivo > < carpeta > </p>
       <p>Para el desmontaje, utilizaremos umount:</p>
@@ -488,7 +488,7 @@
   <section>
     <a name="3.10"></a>
     <h3 class="subTitulo_3">Automatización</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Existen una serie de tareas rutinarias a realizar con regularidad. Existe la posibilidad de automatizarlas para que se ejecuten sin estar pendientes de ellas. Hay dos casos en lo que resulta interesante.
       </p>
@@ -508,7 +508,7 @@
         Para ello contamos con el Programador de tareas, podemos crear una tarea que se va a ejecutar y en qué condiciones.
       </p>
     </article>
-    <article>
+    <article class="articuloApuntes">
       <p>
         También contamos con la posiblidad de realizarlo mediante el Símbolo de sistemas, aunque podemos simplificar este proceso gracias a los ficheros por lotes.
       </p>
@@ -533,7 +533,7 @@
   <section>
     <a name="3.11"></a>
     <h3 class="subTitulo_3">Herramientas de administración de discos. Particiones y volúmenes. Desfragmentación y revisión</h3>
-    <article>
+    <article class="articuloApuntes">
       <p>
         Una unidad física de disco puede dividirse en varias particiones, cada una con un sistema de ficheros diferentes. Estas pueden definirse en el momento de instalar el S.O. o pueden generarse y modificarse desde el propio sistema.
       </p>
